syntax = "proto3";

package pb;

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message SendInvitationRequest {
    string sender = 1;
    int64 secret_code = 2;
    string recepient_username = 3;
    string recepient_email = 4;

}

message SendInvitationResponse {
    bool successful = 1;
}